--- a/Login.html
+++ b/Login.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/login.css">
+    <link rel="stylesheet" href="./styles/navbar.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="./styles/footer.css">
+
 </head>
 <body>
+    <div id="navbar2"></div>
+
+    <div id="navbar1"></div>
+
     <div id="login">
         <h1>Login</h1>
         <form action="">
@@ -15,17 +24,33 @@
             <input type="password" name="" id="Password" placeholder=" Password">
         </form>
         <p id="first"><a href="ForgetPassword.html">Forget your password?</a></p>
-        <button>Sign in</button>
-        <p><a href="Signup.html">Create account</a></p>
+        <button id="signin">Sign in</button>
+        <p id="create"><a href="Signup.html">Create account</a></p>
     </div>
+    <div id="footer_div">
+
+    </div> 
 </body>
 </html>
-<script>
+
+<script src="https://kit.fontawesome.com/f592b44598.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+
+<script type="module">
+    import navbar from "./components/navbar.js";
+    import navbar2 from "./components/navbar2.js"
+    import footer from "./components/footer.js"
+
+document.querySelector("#navbar2").innerHTML=navbar2();
+document.querySelector("#navbar1").innerHTML=navbar();
+document.querySelector("#footer_div").innerHTML=footer();
+
     let x=0;
     let form=document.querySelector("form");
     let userDetails=JSON.parse(localStorage.getItem("userinformation"));
     let LoginUser=Array(1).fill(0);
-    document.querySelector("button").addEventListener("click",()=>{
+    document.querySelector("#signin").addEventListener("click",()=>{
         event.preventDefault();
         let data={
            email:form.email.value,
@@ -49,7 +74,7 @@
                { 
                   console.log(LoginUser)
                   alert("Login Successfully");
-                //   window.location.href="index.html";
+                  window.location.href="index.html";
                }
                else if(x==1)
                {
