--- a/PP.html
+++ b/PP.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -57,4 +57,4 @@
     }    
 
 
-</script>
+</script> -->
