--- a/cartpage.html
+++ b/cartpage.html
@@ -15,7 +15,7 @@ body {
 }
 .overlay {
   height: 100%;
-  width: 0;
+  width: 100%;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -38,7 +38,7 @@ body {
 }
 .overlay-content {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     padding-left: 10px;
     font-weight: 500;
     /* border: 4px solid blue; */
@@ -46,8 +46,10 @@ body {
     /* margin-top: 10px; */
     padding-top: 10px;
     background-color: white;
-    height: 40px;
-    width: 90%;
+    height: 60px;
+    width: 60%;
+    position: sticky;
+    top: 0px;
     
 }
 #myNav{
@@ -66,31 +68,33 @@ body {
     border:0px solid gray;
     display: flex;
     width: 100%;
-    height: 150px;
+    height: 250px;
 }
 
 #box div div:nth-child(1)
 {
-    width: 25%;
-    height: 104px;
+    width: 30%;
+    height: 204px;
     margin-top: 20px;
     border: 1px 0px 0px 1px solid gray;
 }
 #box div div:nth-child(1) img
 {
     margin-top: 1px;
-    width: 100px;
-    height: 100px;
-    /* border: 4px solid brown; */
+    width: 200px;
+    height: 200px;
+    border: 1px solid gray;
 }
 
 #box div div:nth-child(2)
 {
-    width: 75%;
-    height: 150px;
+    width: 70%;
+    height: 250px;
     border:0px solid gray;
     display: flex;
     flex-direction: column;
+    padding-top: 20px;
+    padding-left: 130px;
 }
 #box div div:nth-child(2) h2
 {
@@ -110,6 +114,7 @@ body {
 }
 #box div div:nth-child(2) div
 {
+    padding-left: 0px;
     margin-top: 10px;
     border: 1px solid ;
     height: 28px;
@@ -122,7 +127,6 @@ body {
     width: 40px;
     height: 26px;
     font-size: 20px;
-
 }
 #box div div:nth-child(2) div h2{
     margin:1px 5px 5px 5px;
@@ -157,6 +161,7 @@ body {
      border-radius: 10px;
      color: white;
      border: none;
+     cursor: pointer;  
 }
 *{
    border: none;
@@ -168,8 +173,8 @@ body {
 <div id="myNav" class="overlay">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content">
-     <h3> <a href="">Your Cart &#8594;</a></h3>
-     <h3> <a href="">Continue Shoping</a></h3>
+     <h3> <a href="cartpage.html">Your Cart &#8594;</a></h3>
+     <h3> <a href="index.html">Continue Shoping</a></h3>
   </div>
    <div id="box"></div>
    <div id="fix">
@@ -205,7 +210,7 @@ body {
         <div ><h3>Total</h3></div>
         <div id="Totalpriceof"> <h3>₹ 0</h3></div>
        </div>
-       <button>CHECKOUT</button>
+       <button id="checkout">CHECKOUT</button>
 </div>
 </div> 
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">Click Here </span>
@@ -217,6 +222,7 @@ function openNav() {
 
 function closeNav() {
   document.getElementById("myNav").style.width = "0%";
+  window.location.href="index.html";
 }
 </script>
      
@@ -322,4 +328,8 @@ function closeNav() {
         localStorage.setItem("CartProducts",JSON.stringify(x));
     }
     displaydata(Cardata);
+    document.querySelector("#checkout").addEventListener("click",()=>{
+        window.location.href="Payment.html";
+    })
 </script>
+
