--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
     <!-- nabar 1st part -->
-    <div id="navbar2"></div>
+
     <div id="navbar1"></div>
     <!-- <div id="navbar3">jkxgfjkhg</div> -->
     <hr id="hr">
@@ -141,7 +141,9 @@
     <div id="footer_div">
     </div>
 
-    <div id="whatapps"><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/t/287/assets/whatsapp.svg?v=107532592768653809461651698054" alt=""></div>
+    <div id="whatapps">
+        <a href="https://api.whatsapp.com/send?phone=919319011662&amp;text=Hi,%20I%20need%20some%20Help" target="_blank" id="whatsapp-message"><img src="https://cdn.shopify.com/s/files/1/0054/6665/2718/t/287/assets/whatsapp.svg?v=107532592768653809461651698054" alt=""> </a>
+    </div>
 
 
 
