added the last part

--- a/Bestseller/Bestsellers.html
+++ b/Bestseller/Bestsellers.html
@@ -73,23 +73,9 @@
 </body>
 
 </html>
-<script src="bestseller.js"></script>
+<script src="bestseller.js" type="module"></script>
 
-<script type="module">
 
-  import { sidebar } from "../scripts/sidebar.js"
-  let z = document.querySelector("#dummy_sv")
-  z.innerHTML = sidebar();
-
-  import navbar from "../components/navbar.js";
-  import navbar2 from "../components/navbar2.js"
-  import footer from "../components/footer.js"
-
-  document.querySelector("#navbar2").innerHTML = navbar2();
-  document.querySelector("#navbar1").innerHTML = navbar();
-  document.querySelector("#footer_div").innerHTML = footer();
-
-</script>
 
 <script src="https://kit.fontawesome.com/f592b44598.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
