--- a/Body Care/Body Care.html
+++ b/Body Care/Body Care.html
@@ -79,21 +79,7 @@
 </body>
 
 </html>
-<script src="Body Care.js"></script>
-<script type="module">
-    import { sidebar } from "../scripts/sidebar.js"
-    let z = document.querySelector("#dummy_sv")
-    z.innerHTML = sidebar();
-
-    import navbar from "../components/navbar.js";
-    import navbar2 from "../components/navbar2.js"
-    import footer from "../components/footer.js"
-
-    document.querySelector("#navbar2").innerHTML = navbar2();
-    document.querySelector("#navbar1").innerHTML = navbar();
-    document.querySelector("#footer_div").innerHTML = footer();
-
-</script>
+<script src="Body Care.js" type="module"></script>
 
 
 <script src="https://kit.fontawesome.com/f592b44598.js" crossorigin="anonymous"></script>
